# api-gateway/api/models/basket.go
@@ -1,0 +1,14 @@
+package models
+
+type Basket struct {
+	UserId    string
+	ProductId []Product
+	TotalCount     int64
+}
+type BasketCeateReq struct {
+	ProductId string
+}
+type ListBasket struct {
+	Baskets []Basket
+	Total   int64
+}
