# product-service/internal/infrastructure/repository/postgresql/basket.go
@@ -2,124 +2,146 @@ package postgresql
 
 import (
 	"context"
-	"errors"
+	"database/sql"
 	"product-service/internal/entity"
-	"time"
 
 	"github.com/Masterminds/squirrel"
+	"github.com/lib/pq"
 )
 
-func (u *productRepo) SaveToBasket(ctx context.Context, req *entity.Basket) (*entity.Basket, error) {
-	data := map[string]any{
-		"id":         req.ID,
-		"user_id":    req.UserID,
-		"product_id": req.ProductID,
-	}
-
-	query, args, err := u.db.Sq.Builder.Insert(u.basketTable).SetMap(data).ToSql()
-	if err != nil {
+func (u *productRepo) SaveToBasket(ctx context.Context, req *entity.BasketCreateReq) (*entity.Basket, error) {
+	var existingProductIDs []string
+	err := u.db.QueryRow(ctx, `SELECT product_id FROM `+u.basketTable+` WHERE user_id = $1`, req.UserID).Scan(pq.Array(&existingProductIDs))
+	if err != nil && err != sql.ErrNoRows {
 		return nil, err
+
 	}
 
-	_, err = u.db.Exec(ctx, query, args...)
-	if err != nil {
-		return nil, err
+	if err == sql.ErrNoRows {
+		productIDs := []string{req.ProductID}
+		data := map[string]any{
+			"user_id":    req.UserID,
+			"product_id": pq.Array(productIDs),
+		}
+
+		query, args, err := u.db.Sq.Builder.Insert(u.basketTable).SetMap(data).ToSql()
+		if err != nil {
+			return nil, err
+		}
+
+		_, err = u.db.Exec(ctx, query, args...)
+		if err != nil {
+			return nil, err
+		}
+	} else {		
+		var exists bool
+			for _, existingProductID := range existingProductIDs {
+				if existingProductID == req.ProductID {
+					exists = true
+					break
+				}
+			}
+
+			if exists {
+				updatedProductIDs := make([]string, 0, len(existingProductIDs))
+				for _, pid := range existingProductIDs {
+					if pid != req.ProductID {
+						updatedProductIDs = append(updatedProductIDs, pid)
+					}
+				}
+
+				data := map[string]any{
+					"product_id": pq.Array(updatedProductIDs),
+				}
+
+				query, args, err := u.db.Sq.Builder.
+					Update(u.basketTable).
+					SetMap(data).
+					Where("user_id = ?", req.UserID).
+					ToSql()
+				if err != nil {
+					return nil, err
+				}
+
+				_, err = u.db.Exec(ctx, query, args...)
+				if err != nil {
+					return nil, err
+				}
+
+			} else {
+				
+				_, err = u.db.Exec(ctx, `UPDATE `+u.basketTable+` SET product_id = array_append(product_id, $2::uuid) WHERE user_id = $1`, req.UserID, req.ProductID)
+				if err != nil {
+					return nil, err
+				}
+			
+		}
 	}
 
-	return req, nil
+	return &entity.Basket{
+		UserID: req.UserID,
+	}, nil
 }
 
-func (u *productRepo) UpdateBasket(ctx context.Context, basket *entity.Basket) (*entity.Basket, error) {
-	data := map[string]any{
-		"id":         basket.ID,
-		"product_id": basket.ProductID,
-		"user_id":    basket.UserID,
-		"count":      basket.Count,
-		"updated_at": time.Now().Format(time.RFC3339),
-	}
+func (u *productRepo) GetBasket(ctx context.Context, req *entity.GetBAsketReq) (*entity.Basket, error) {
+	product := &entity.Basket{}
 
-	sqlStr, args, err := u.db.Sq.Builder.
-		Update(u.basketTable).
-		SetMap(data).
-		Where(squirrel.Eq{"id": basket.ID}).
-		ToSql()
-	if err != nil {
-		return nil, err
-	}
-
-	commandTag, err := u.db.Exec(ctx, sqlStr, args...)
-	if err != nil {
-		return nil, err
-	}
-	if commandTag.RowsAffected() == 0 {
-		return nil, errors.New("no sql rows")
-	}
-
-	return basket, nil
-}
-
-func (u *productRepo) ListBaskets(ctx context.Context, req *entity.GetWithID) (*entity.ListBasket, error) {
-	products := &entity.ListBasket{}
-
+	offset := (req.Page - 1 ) * req.Limit
 	queryBuilder := u.basketsSelectQueryPrefix()
-	queryBuilder = queryBuilder.Where(squirrel.Eq{"id": req.ID})
-	queryBuilder = queryBuilder.Where("deleted_at IS NULL")
+	queryBuilder = queryBuilder.Where(squirrel.Eq{"user_id": req.UserId})
+	queryBuilder = queryBuilder.Limit(uint64(req.Limit))
+	queryBuilder = queryBuilder.Offset(uint64(offset))
 
 	query, args, err := queryBuilder.ToSql()
 	if err != nil {
 		return nil, err
 	}
 
-	rows, err := u.db.Query(ctx, query, args...)
+	err = u.db.QueryRow(ctx, query, args...).Scan(
+		&product.ProductIDs,
+		&product.UserID,
+	)
 	if err != nil {
 		return nil, err
 	}
-	defer rows.Close()
-
-	for rows.Next() {
-		var product entity.Basket
-		if err = rows.Scan(
-			&product.ID,
-			&product.ProductID,
-			&product.UserID,
-		); err != nil {
-			return nil, err
-		}
-		products.Baskets = append(products.Baskets, &product)
-
+	var existingProductIDs []string
+	err = u.db.QueryRow(ctx, `SELECT product_id FROM `+u.basketTable+` WHERE user_id = $1`, req.UserId).Scan(pq.Array(&existingProductIDs))
+	if err != nil {
+		return nil, err
 	}
-
-	var count uint64
-	total := "SELECT COUNT(*) FROM products WHERE deleted_at IS NULL"
-	if err := u.db.QueryRow(ctx, total).Scan(&count); err != nil {
-		products.TotalCount = 0
-	}
-	products.TotalCount = count
-
-	return products, nil
+	product.TotalCount = int64(len(existingProductIDs))
+	return product, nil
 }
 
-func (u *productRepo) DeleteFromBasket(ctx context.Context, id string) error {
-	caluses := map[string]interface{}{
-		"deleted_at": time.Now().Format(time.RFC3339),
+func (u *productRepo) DeleteFromBasket(ctx context.Context, userID string, productID string) error {
+	var existingProductIDs []string
+	err := u.db.QueryRow(ctx, `SELECT product_id FROM `+u.basketTable+` WHERE user_id = $1`, userID).Scan(pq.Array(&existingProductIDs))
+	if err != nil {
+		return err
 	}
 
-	sqlStr, args, err := u.db.Sq.Builder.
+	updatedProductIDs := make([]string, 0, len(existingProductIDs))
+	for _, pid := range existingProductIDs {
+		if pid != productID {
+			updatedProductIDs = append(updatedProductIDs, pid)
+		}
+	}
+
+	data := map[string]any{
+		"product_id": pq.Array(updatedProductIDs),
+	}
+
+	query, args, err := u.db.Sq.Builder.
 		Update(u.basketTable).
-		SetMap(caluses).
-		Where(u.db.Sq.Equal("id", id)).
-		Where("deleted_at IS NULL").
+		SetMap(data).
+		Where("user_id = ?", userID).
 		ToSql()
 	if err != nil {
 		return err
 	}
 
-	commandTag, err := u.db.Exec(ctx, sqlStr, args...)
+	_, err = u.db.Exec(ctx, query, args...)
 	if err != nil {
-		return err
-	}
-
-	if commandTag.RowsAffected() == 0 {
 		return err
 	}
 
